# paperflow

./: .env.example  .gitignore  MULTI_TOPIC.md  README.md  config.example.yaml  pyproject.toml  requirements.txt
paperflow/: __init__.py  batch_compare.py  cache.py  code_finder.py  config.py  deep_read.py  logging_utils.py  main.py  notion_client.py  obsidian_export.py  pdf2zh_runner.py  pdf_extract.py  pdf_locator.py  schemas.py  screening.py  translation_artifacts.py  translation_queue.py  utils.py  venue_enhancer.py  zotero_attach.py  zotero_client.py
paperflow/llm/: base.py  router.py
prompts/: batch_compare.md  deep_read.md  obsidian_note.md  pdf2zh_translate_prompt.md  speed_card.md
scripts/: align_notion.py  check_progress.py  check_translation.py  cleanup_test.py  unarchive_test.py
tests/: test_llm.py  test_mark_must_read.py  test_notion.py  test_pdf.py  test_screening.py  test_workflow_units.py
